<resources>
    <string name="app_name">Emptio</string>
    <string name="action_settings">Configurações</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirmar_cadastro">Confirmar cadastro</string>
    <string name="voltar_login">Voltar para o login</string>
    <string name="sua_senha_hint">Sua senha</string>
    <string name="seu_nome_de_usu_rio_hint">Seu nome de usuário</string>
    <string name="seu_email_hint">Seu email</string>
    <string name="confirme_sua_senha_hint">Confirme sua senha</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="usuario_logado_pref">usuario_logado_pref</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="efetuar_compra">Efetuar compra</string>
    <string name="total">Total:</string>
    <string name="cadastrar_novo_cartao">Cadastrar novo cartão</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="currency_placeholder">R$ 0,00</string>
    <string name="numero_cartao_placeholder">0000 0000 0000 0000</string>
    <string name="data_cartao_placeholder">00/00</string>
    <string name="cvc_cartao_placeholder">000</string>
    <string name="usar">Usar</string>
    <string name="cadastrar_cartao">Cadastrar cartão</string>
    <string name="numero_do_cartao_hint">Número do cartão</string>
    <string name="nome_no_cartao_hint">Nome no cartão</string>
    <string name="data_de_expiracao_hint">Data de expiração</string>
    <string name="cvc">CVC</string>
    <string name="botao_cadastrar_cartao">Cadastrar cartão</string>
    <string name="nome_usuario">Nome Usuario</string>
    <string name="obrigado_pela_sua_compra">Obrigado pela sua compra!</string>

</resources>