<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/bordas_tela"
    tools:context=".CadastroFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/espacamento_logo"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo" />

    <EditText
        android:id="@+id/cadastro_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/seu_nome_de_usu_rio_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/cadastro_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/seu_email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/cadastro_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/sua_senha_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cadastro_confirme_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/confirme_sua_senha_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/botao_cadastro"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se" />

</LinearLayout>