<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cartao_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_cartao_placeholder"
            android:textSize="@dimen/textview_produto_titulo_dimens"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numero">

            <TextView
                android:id="@+id/data_expiracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/data_cartao_placeholder"
                android:textSize="@dimen/textview_produto_titulo_dimens" />

            <TextView
                android:id="@+id/cvc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cvc_cartao_placeholder"
                android:textSize="@dimen/textview_produto_titulo_dimens" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>